--- a/src/App.css
+++ b/src/App.css
@@ -11,3 +11,10 @@
   -ms-overflow-style: none;  /* IE, Edge */
   scrollbar-width: none;     /* Firefox */
 }
+
+body {
+  font-family:
+    'Inter', 'Montserrat', 'Roboto', 'Poppins', /* 영문 */
+    'Noto Sans KR', 'Pretendard', 'Spoqa Han Sans Neo', /* 한글 */
+    Arial, sans-serif;
+}
