refactor: tailwindcss 버전 변경

--- a/src/App.css
+++ b/src/App.css
@@ -1,16 +1,4 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
-
-
-/* src/index.css 또는 app.css에 추가 */
-.no-scrollbar::-webkit-scrollbar {
-    display: none;
-}
-.no-scrollbar {
-  -ms-overflow-style: none;  /* IE, Edge */
-  scrollbar-width: none;     /* Firefox */
-}
+@import "tailwindcss";
 
 body {
   font-family:
